querySelector() throws exception for -webkit-prefixed pseudo elements https://bugs.webkit.org/show_bug.cgi?id=149160 rdar://99299129

Reviewed by Antti Koivisto.

SelectorHasInvalidSelectorFunctor which is only used by querySelector()
and friends treated custom pseudo-elements as invalid. This is wrong.
querySelector("::placeholder") and querySelector("::-webkit-asdf") are
perfectly acceptable inputs, they are just supposed to return null.

Also do some minor code cleanup while in the general area.

Canonical link: https://commits.webkit.org/272337@main